--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-MONGO_URI = mongodb+srv://cyberentroll:<87YpPrm3wrpMofJ3>@cluster0.flwf8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = mongodb+srv://cyberentroll:87YpPrm3wrpMofJ3@cluster0.flwf8.mongodb.net/MediumClone?retryWrites=true&w=majority&appName=Cluster0
