feat: implement post management with create, update, and fetch functionality; add JWT protection to routes

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,8 @@
 PORT = 5000
 MONGO_URI=mongodb+srv://cyberentroll:87YpPrm3wrpMofJ3@cluster0.flwf8.mongodb.net/MediumClone?retryWrites=true&w=majority&appName=Cluster0
 
+CLOUDINARY_
+
 JWT_SECRET=kJJHSHIDfuysjfdhjkshUUjhJHusdfjsIUGH5455sdfsjdu
 JWT_TOKEN_SECRET_EXPIRES_IN = 7d
 NODE_ENV=development
