--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,9 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.2.0",
+    "slate": "^0.112.0",
+    "slate-react": "^0.112.1",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.0.9",
     "zustand": "^5.0.3"
   },
